--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,11 +3,15 @@ aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
+anthropic==0.42.0
 anyio==4.8.0
 attrs==24.3.0
 backoff==2.2.1
 beautifulsoup4==4.12.3
+boto3==1.35.97
+botocore==1.35.97
 breadability==0.1.20
+cachetools==5.5.0
 certifi==2024.12.14
 cffi==1.17.1
 chardet==5.2.0
@@ -15,16 +19,23 @@ charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.0
 dataclasses-json==0.6.7
+Deprecated==1.2.15
+dirtyjson==1.0.8
+distro==1.9.0
 docopt==0.6.2
 emoji==2.14.0
 eval_type_backport==0.2.2
 filetype==1.2.0
 frozenlist==1.5.0
+fsspec==2024.12.0
+google-auth==2.37.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+jiter==0.8.2
+jmespath==1.0.1
 joblib==1.4.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
@@ -33,17 +44,24 @@ langchain-community==0.0.38
 langchain-core==0.1.53
 langdetect==1.0.9
 langsmith==0.1.147
+llama-index-core==0.12.10.post1
+llama-index-llms-anthropic==0.6.3
+llama-index-llms-bedrock==0.3.3
 lxml==5.3.0
 Markdown==3.4.1
 marshmallow==3.24.1
 multidict==6.1.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+networkx==3.4.2
 nltk==3.9.1
 numpy==1.26.4
 orjson==3.10.14
 packaging==23.2
+pillow==11.1.0
 propcache==0.2.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycountry==24.6.1
 pycparser==2.22
 pydantic==2.9.2
@@ -57,6 +75,8 @@ RapidFuzz==3.11.0
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rsa==4.9
+s3transfer==0.10.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
@@ -64,6 +84,7 @@ SQLAlchemy==2.0.36
 sumy==0.11.0
 tabulate==0.9.0
 tenacity==8.5.0
+tiktoken==0.8.0
 tqdm==4.67.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
